# webos-vncserver

./: .gitignore  CMakeLists.txt  README.md  appinfo.json  autostart.sh  package-lock.json  package.json  services.json  webpack.config.js
.github/workflows/: build-test.yml  build.yml
frontend/: App.js  components.js  index.html  index.js  style.scss  theme.json
prebuilt/: CMakeLists.txt
src/: capture_gm.c  capture_halgal.c  log.c  main.c  server.c  server.h  service.c  service.h  settings.c  settings.h  uinput.c  webos-vncserver.c
